--- a/cards-input.html
+++ b/cards-input.html
@@ -8,6 +8,7 @@
   <template>
     <paper-button on-tap="add">Add</paper-button>
     <paper-dialog>
+      Card:
       <paper-textarea value="{{cardsQ::change}}" label="Question"></paper-textarea>
       <paper-textarea value="{{cardsA::change}}" label="Answer"></paper-textarea>
       <div class="buttons">
