--- a/cards-view.html
+++ b/cards-view.html
@@ -8,7 +8,7 @@
 
 <dom-module id="help-view">
   <template>
-    <mediator-data id="s" as-array="{{help}}" location="{{location}}" folder="[[folder]]" default-folder="{{defaultFolder}}"></mediator-data>
+    <mediator-data id="c" as-array="{{help}}" location="{{location}}" folder="[[folder]]" default-folder="{{defaultFolder}}"></mediator-data>
     <help-list edit="[[edit]]" edit-default="[[editDefault]]" help="{{help}}" on-delete-help="deletehelpQuestion"></help-list>
     <template is="dom-if" if="{{editDefault}}">
       Add:
@@ -25,7 +25,7 @@
       editDefault: Boolean
     },
     addhelpQuestion: function(e) {
-      this.$.s.push({
+      this.$.c.push({
         question: e.detail.Q,
         answer: e.detail.A
       });
