--- a/cards-item.html
+++ b/cards-item.html
@@ -6,6 +6,7 @@
 -->
 <dom-module id="cards-item">
   <template>
+    card
     <template is="dom-if" if="{{edit}}">
       <paper-textarea value="{{cards.question::change}}" label="Question"></paper-textarea>
       <paper-textarea value="{{cards.answer::change}}" label="Answer"></paper-textarea>
