--- a/cards-item.html
+++ b/cards-item.html
@@ -1,20 +1,29 @@
 <link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-input/paper-textarea.html">
+<link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../paper-material/paper-material.html">
+<link rel="import" href="../iron-image/iron-image.html">
 <!--
 `<cards-item style="display:block" cards="{{item}}"></cards-item>`
 -->
 <dom-module id="cards-item">
   <template>
-    card
     <template is="dom-if" if="{{edit}}">
-      <paper-textarea value="{{cards.question::change}}" label="Question"></paper-textarea>
-      <paper-textarea value="{{cards.answer::change}}" label="Answer"></paper-textarea>
+      <paper-input value="{{cards.image::change}}" label="Image"></paper-input>
+      <paper-input value="{{cards.title::change}}" label="Title"></paper-input>
+      <paper-input value="{{cards.type::change}}" label="Type"></paper-input>
+      <paper-input value="{{cards.url::change}}" label="URL"></paper-input>
+      <paper-input value="{{cards.value::change}}" label="Value"></paper-input>
     </template>
     <template is="dom-if" if="{{!edit}}">
-      <paper-material style="background:#fff;padding:20px;margin: 5px;max-width: 200px">
-        Q: [[cards.question]] <br/>
-        A: <span inner-H-T-M-L="{{cards.answer}}"></span>
+      <paper-material style="background:#fff;padding:20px;margin:5px;max-width:250px">
+					<div class="cardcontent">
+						<paper-ripple></paper-ripple>
+						<div class="body1" style="float: left;width:150px">
+							<h3>[[cards.value]]</h3>
+							<span>[[cards.title]]</span>
+						</div>
+						<iron-image sizing="contain" src="[[cards.image]]" style="float: right;width:100px; height:100px;"></iron-image>
+					</div>
       </paper-material>
     </template>
   </template>
