--- a/cards-view.html
+++ b/cards-view.html
@@ -9,9 +9,9 @@
 <dom-module id="cards-view">
   <template>
     <mediator-data id="c" as-array="{{cards}}" location="{{location}}" folder="[[folder]]" default-folder="{{defaultFolder}}"></mediator-data>
-    <cards-list edit="[[edit]]" edit-default="[[editDefault]]" cards="{{cards}}" on-delete-cards="deletecardsQuestion"></cards-list>
-    <template is="dom-if" if="{{editDefault}}">
-      <cards-input edit="[[edit]]" on-add-cards="addcardsQuestion"></cards-input>
+    <cards-list edit="[[edit]]" cards="{{cards}}" on-delete-cards="deletecardsQuestion"></cards-list>
+    <template is="dom-if" if="{{edit}}">
+      <cards-input edit="true" on-add-cards="addcardsQuestion"></cards-input>
     </template>
   </template>
 </dom-module>
