--- a/user-cards.html
+++ b/user-cards.html
@@ -11,7 +11,7 @@
         padding: 0 2px;
       }
     </style>
-    <cards-view location="[[location]]" folder="[[cardsFolder]]" default-folder="{{cardsDefaultFolder}}" edit-default="{{editDefault}}"></cards-view>
+    <cards-view edit="{{edit}}" location="[[location]]" folder="[[cardsFolder]]" default-folder="{{cardsDefaultFolder}}" edit-default="{{editDefault}}"></cards-view>
     <template is="dom-if" if="{{editDefault}}">
       <h3>Edit Default Set:</h3>
       <user-cards edit="true" location="[[location]]" folder="[[defaultFolder]]"></user-cards>
