--- a/cards-list.html
+++ b/cards-list.html
@@ -24,7 +24,7 @@
     filterCards: function(output) {
       var filteredOutput = output
       return function(item) {
-        return output.indexOf(item) !== -1
+        return filteredOutput.indexOf(item) !== -1
       }
     }
   });
