--- a/demo.html
+++ b/demo.html
@@ -8,11 +8,9 @@
   <body>
     <h3>user-cards all</h3>
     <user-cards edit edit-default answer folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
-    <h3>user-cards answer</h3>
-    <user-cards answer folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
     <h3>user-cards edit-default</h3>
     <user-cards edit-default folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
-    <h3>user-cards edit</h3>
-    <user-cards edit folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
+    <h3>user-cards</h3>
+    <user-cards folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
   </body>
 </html>
