--- a/cards-list.html
+++ b/cards-list.html
@@ -9,13 +9,13 @@
     <template is="dom-if" if="{{!edit}}">
       <paper-filter by="type" data="{{cards}}" output="{{output}}"></paper-filter>
       <template is="dom-repeat" items="{{output}}">
-        <div><cards-item index="[[index]]" edit="[[edit]]" cards="{{item}}"></cards-item></div>
+        <cards-item style="display: inline-block" cards="{{item}}"></cards-item>
       </template>
     </template>
     <template is="dom-if" if="{{edit}}">
       <sortable-list style="display: inline-block">
         <template is="dom-repeat" items="{{cards}}">
-          <div><cards-item index="[[index]]" edit="[[edit]]" cards="{{item}}"></cards-item></div>
+          <div><cards-item index="[[index]]" edit cards="{{item}}"></cards-item></div>
         </template>
       </sortable-list>
     </template>
