--- a/cards-list.html
+++ b/cards-list.html
@@ -15,7 +15,10 @@
     <template is="dom-if" if="{{edit}}">
       <sortable-list style="display: inline-block">
         <template is="dom-repeat" items="{{cards}}">
-          <div><cards-item index="[[index]]" edit cards="{{item}}"></cards-item></div>
+          <div>
+            <cards-item index="[[index]]" cards="{{item}}"></cards-item>
+            <cards-item index="[[index]]" edit cards="{{item}}"></cards-item>
+          </div>
         </template>
       </sortable-list>
     </template>
