--- a/cards-item.html
+++ b/cards-item.html
@@ -2,32 +2,32 @@
 <link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../paper-material/paper-material.html">
 <link rel="import" href="../iron-image/iron-image.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
 <!--
 `<cards-item style="display:block" cards="{{item}}"></cards-item>`
 -->
 <dom-module id="cards-item">
   <template>
-    <template is="dom-if" if="{{edit}}">
-      <paper-material>
-        <paper-input value="{{cards.image::change}}" label="Image"></paper-input>
-        <paper-input value="{{cards.title::change}}" label="Title"></paper-input>
-        <paper-input value="{{cards.type::change}}" label="Type"></paper-input>
-        <paper-input value="{{cards.url::change}}" label="URL"></paper-input>
-        <paper-input value="{{cards.value::change}}" label="Value"></paper-input>
-      </paper-material>
-    </template>
-    <template is="dom-if" if="{{!edit}}">
-      <paper-material style="background:#fff;padding:20px;margin:5px;max-width:250px">
-        <div>
-          <paper-ripple></paper-ripple>
-          <div class="body1" style="float: left;width:150px">
-            <h3>[[cards.value]]</h3>
-            <span>[[cards.title]]</span>
-          </div>
-          <iron-image sizing="contain" src="[[cards.image]]" style="float: right;width:100px; height:100px;"></iron-image>
+    <paper-material style="background:#fff;padding:20px;margin:5px;max-width:250px">
+      <div>
+        <paper-ripple></paper-ripple>
+        <div class="body1" style="float: left;width:150px">
+          <h3>[[cards.value]]</h3>
+          <span>[[cards.title]]</span>
         </div>
-      </paper-material>
-    </template>
+        <iron-image sizing="contain" src="[[cards.image]]" style="float: right;width:100px; height:100px;"></iron-image>
+        <template is="dom-if" if="{{edit}}">
+          <paper-dialog>
+            <paper-input value="{{cards.image::change}}" label="Image"></paper-input>
+            <paper-input value="{{cards.title::change}}" label="Title"></paper-input>
+            <paper-input value="{{cards.type::change}}" label="Type"></paper-input>
+            <paper-input value="{{cards.url::change}}" label="URL"></paper-input>
+            <paper-input value="{{cards.value::change}}" label="Value"></paper-input>
+          </paper-dialog>
+          <div on-tap="_edit">ǝ</div>
+        </template>
+      </div>
+    </paper-material>
   </template>
 </dom-module>
 <script>
@@ -39,6 +39,9 @@
     properties: {
       edit:{type: Boolean, value: false},
       cards: {notify: true}
+    }, 
+    _edit: function() {
+      this.$$('paper-dialog').open();
     }
   });
 </script>
