--- a/user-cards.html
+++ b/user-cards.html
@@ -27,7 +27,7 @@
       folder: String,
       defaultFolder: {type:String, value:"default"},
       edit: {type:Boolean, value: true},
-      editDefault: {type:Boolean, value: true},
+      editDefault: {type:Boolean, value: false},
       cardsFolder: {computed:"getcardsFolder(folder)"},
       cardsDefaultFolder: {computed:"getcardsDefaultFolder(defaultFolder)"}
     },
