--- a/cards-item.html
+++ b/cards-item.html
@@ -24,7 +24,7 @@
             <paper-input value="{{cards.url::change}}" label="URL"></paper-input>
             <paper-input value="{{cards.value::change}}" label="Value"></paper-input>
           </paper-dialog>
-          <div on-tap="_edit">ǝ</div>
+          <div on-tap="_edit">=</div>
         </template>
       </div>
     </paper-material>
