--- a/cards-item.html
+++ b/cards-item.html
@@ -25,7 +25,7 @@
             <paper-input value="{{cards.value::change}}" label="Value"></paper-input>
             <div class="buttons"><paper-button dialog-dismiss>done</paper-button></div>
           </paper-dialog>
-          <paper-button on-tap="_edit">=</paper-button>
+          <button on-tap="_edit">=</button>
         </template>
       </div>
     </paper-material>
