--- a/cards-view.html
+++ b/cards-view.html
@@ -9,7 +9,7 @@
 <dom-module id="cards-view">
   <template>
     <mediator-data id="c" as-array="{{cards}}" location="{{location}}" folder="[[folder]]" default-folder="{{defaultFolder}}"></mediator-data>
-    <cards-list edit="[[edit]]" cards="{{cards}}" on-delete-cards="deletecardsQuestion"></cards-list>
+    <cards-list edit="{{edit}}" cards="{{cards}}" on-delete-cards="deletecardsQuestion"></cards-list>
     <template is="dom-if" if="{{edit}}">
       <cards-input edit="true" on-add-cards="addcardsQuestion"></cards-input>
     </template>
@@ -20,7 +20,7 @@
     is: "cards-view",
     properties: {
       cards: Array,
-      edit: Boolean,
+      edit: {type: Boolean, value: false},
       editDefault: Boolean
     },
     addcardsQuestion: function(e) {
