--- a/user-cards.html
+++ b/user-cards.html
@@ -26,7 +26,7 @@
     properties: {
       folder: String,
       defaultFolder: {type:String, value:"default"},
-      edit: {type:Boolean, value: true},
+      edit: {type:Boolean, value: false},
       editDefault: {type:Boolean, value: false},
       cardsFolder: {computed:"getcardsFolder(folder)"},
       cardsDefaultFolder: {computed:"getcardsDefaultFolder(defaultFolder)"}
