--- a/user-cards.html
+++ b/user-cards.html
@@ -16,7 +16,7 @@
     </template>
     <template is="dom-if" if="{{editDefault}}">
       <h3>Edit Default Set:</h3>
-      <user-cards edit="true" location="[[location]]" folder="[[defaultFolder]]"></user-cards>
+      <user-cards edit location="[[location]]" folder="[[defaultFolder]]"></user-cards>
     </template>
   </template>
 </dom-module>
