--- a/user-cards.html
+++ b/user-cards.html
@@ -15,7 +15,7 @@
       <cards-view edit="{{edit}}" location="[[location]]" folder="[[cardsFolder]]" default-folder="{{cardsDefaultFolder}}" edit-default="{{editDefault}}"></cards-view>
     </template>
     <template is="dom-if" if="{{editDefault}}">
-      <h3>Edit Default Set:</h3>
+      <h3>Edit Default Set</h3>
       <user-cards edit location="[[location]]" folder="[[defaultFolder]]"></user-cards>
     </template>
   </template>
