--- a/cards-item.html
+++ b/cards-item.html
@@ -31,7 +31,7 @@
           <paper-button dialog-dismiss>done</paper-button>
         </div>
       </paper-dialog>
-      <button on-tap="_edit">=</button>
+      <button on-tap="_edit">✏</button>
     </template>
   </template>
 </dom-module>
