--- a/cards-item.html
+++ b/cards-item.html
@@ -29,7 +29,7 @@
               <paper-button dialog-dismiss>done</paper-button>
             </div>
           </paper-dialog>
-          <button on-tap="_edit">✏</button>
+          <button on-tap="_edit" style="position:absolute;right:0;top:0">✏</button>
         </template>
       </paper-material>
     </a>
