--- a/cards-view.html
+++ b/cards-view.html
@@ -9,7 +9,7 @@
 <dom-module id="cards-view">
   <template>
     <mediator-data id="c" as-array="{{cards}}" location="{{location}}" folder="[[folder]]" default-folder="{{defaultFolder}}"></mediator-data>
-    <cards-list edit="{{edit}}" cards="{{cards}}" on-delete-cards="deletecardsQuestion"></cards-list>
+    <cards-list edit="{{edit}}" cards="{{cards}}" on-delete-card="deleteCard"></cards-list>
     <template is="dom-if" if="{{edit}}">
       <cards-input edit on-add-cards="addcardsQuestion"></cards-input>
     </template>
@@ -32,8 +32,8 @@
         value: e.detail.value
       });
     },
-    deletecardsQuestion: function(e) {
-      this.arrayDelete('cards', e.detail.cardsQuestion); //TODO e.detail.??
+    deletecard: function(e) {
+      this.arrayDelete('cards', e.detail.cards); //TODO e.detail.??
     },
     toggleView: function() {
       if (this.edit) this.admin = !this.admin;
