--- a/cards-view.html
+++ b/cards-view.html
@@ -32,7 +32,7 @@
         value: e.detail.value
       });
     },
-    deletecard: function(e) {
+    deleteCard: function(e) {
       this.arrayDelete('cards', e.detail.cards); //TODO e.detail.??
     },
     toggleView: function() {
