Change Edit icons and location

--- a/cards-item.html
+++ b/cards-item.html
@@ -31,7 +31,7 @@
               <paper-button dialog-dismiss>done</paper-button>
             </div>
           </paper-dialog>
-          <button on-tap="_edit" style="position:absolute;right:0;top:0">✏</button>
+          <paper-button on-tap="_edit" style="position:absolute;right:-20px;top:0"><iron-icon icon="create"></iron-icon></paper-button>
         </template>
       </paper-material>
 
