adding height to card

--- a/cards-item.html
+++ b/cards-item.html
@@ -8,7 +8,7 @@
 -->
 <dom-module id="cards-item">
   <template>
-      <paper-material style="background:#fff;padding:20px;margin:5px;max-width:250px">
+      <paper-material style="height:117px;background:#fff;padding:20px;margin:5px;max-width:250px">
         <a href="[[cards.url]]" title="[[cards.value]]">
           <div>
             <paper-ripple></paper-ripple>
