Image into a circle

--- a/cards-item.html
+++ b/cards-item.html
@@ -19,8 +19,8 @@
               <span style="float: right; position:absolute; top: 90px; right: 0px; border-width: 1px; border-top-style: solid; border-left-style: solid; border-bottom-style: solid; padding: 2px; font-size: 10px; border-color: #333; color: #333;">[[cards.type]]</span>
             </div>
           </div>
-          <div id="pic" style="margin-left: 25px; margin-right: 25px; position: absolute; bottom: 0;">
-            <iron-image sizing="contain" src="[[cards.image]]" style="float: right;width:100px; height:100px;"></iron-image>
+          <div id="pic" style="margin-left: 40px; position: absolute; bottom: 5px;">
+            <iron-image sizing="contain" src="[[cards.image]]" style="border-radius: 50%; border-style: solid; border-color: #d1d1e0; border-width: 1px; height: 70px; width: 70px;"></iron-image>
           </div>
         </div>
       </a>
