--- a/user-cards.html
+++ b/user-cards.html
@@ -1,6 +1,6 @@
 <link rel="import" href="cards-view.html">
 <!--
-`<user-cards answer edit edit-default folder="marcus7777"></user-cards>` cards for users 
+`<user-cards answer edit edit-default folder="marcus7777"></user-cards>` cards for users
 @demo demo.html
 -->
 
@@ -15,6 +15,11 @@
       <cards-view edit="{{edit}}" location="[[location]]" folder="[[cardsFolder]]" default-folder="{{cardsDefaultFolder}}" edit-default="{{editDefault}}"></cards-view>
     </template>
     <template is="dom-if" if="{{editDefault}}">
+      <div id="listofUserHeading" style="height: 50px; width: 100%; background-color: red; padding: 2px 0 20px 20px;">
+        <h2 style="color: #FFF; float:left;">Cards</h2>
+        <iron-icon icon="account-circle" style="
+          color: #FFF; height: 40px; width: 40px; float: right; margin: 15px 20px 0px 0px;}"></iron-icon>
+      </div>
       <h3>Add, Edit or Delete</h3>
       <user-cards edit location="[[location]]" folder="[[defaultFolder]]"></user-cards>
     </template>
