--- a/demo.html
+++ b/demo.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <h3>user-cards all</h3>
-    <user-cards edit edit-default answer folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
+    <user-cards edit edit-default answer folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
     <h3>user-cards edit-default</h3>
-    <user-cards edit-default folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
+    <user-cards edit-default folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
     <h3>user-cards</h3>
-    <user-cards folder="marcus7777" location="https://open-elements.firebaseio.com/"></user-cards>
+    <user-cards folder="marcus7777" location="https://open-elements.firebaseio.com/all/"></user-cards>
   </body>
 </html>
