--- a/cards-view.html
+++ b/cards-view.html
@@ -1,6 +1,5 @@
 <link rel="import" href="cards-list.html">
-<link rel="import" href="cards-input.html">
-<link rel="import" href="../paper-button/paper-button.html">
+<link rel="import" href="cards-input.html" async>
 <link rel="import" href="../mediator-data/mediator-data.html">
 <!--
 `<cards-view location="[[location]]" edit="{{edit}}" folder="[[cardsFolder]]" default-folder="{{cardsDefaultFolder}}" edit-default="{{editDefault}}"></cards-view>`
