--- a/cards-item.html
+++ b/cards-item.html
@@ -1,8 +1,9 @@
-<link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-input/paper-input.html">
+<link rel="import" href="../paper-button/paper-button.html" async>
+<link rel="import" href="../paper-input/paper-input.html" async>
 <link rel="import" href="../paper-material/paper-material.html">
 <link rel="import" href="../iron-image/iron-image.html">
-<link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html" async>
+<link rel="import" href="../iron-icon/iron-icon.html" async>
 <!--
 `<cards-item style="display:block" cards="{{item}}"></cards-item>`
 -->
