--- a/user-cards.html
+++ b/user-cards.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="cards-view.html">
 <!--
 `<user-cards answer edit edit-default folder="marcus7777"></user-cards>` cards for users
