--- a/cards-item.html
+++ b/cards-item.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../paper-material/paper-material.html">
 <link rel="import" href="../iron-image/iron-image.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html" async>
-<link rel="import" href="../iron-icon/iron-icon.html" async>
+<link rel="import" href="../iron-icon/iron-icon.html">
 <!--
 `<cards-item style="display:block" cards="{{item}}"></cards-item>`
 -->
