--- a/cards-input.html
+++ b/cards-input.html
@@ -1,8 +1,8 @@
-<link rel="import" href="../paper-button/paper-button.html" async>
-<link rel="import" href="../paper-input/paper-input.html" async>
-<link rel="import" href="../iron-icons/iron-icons.html" async>
-<link rel="import" href="../paper-fab/paper-fab.html" async>
-<link rel="import" href="../paper-dialog/paper-dialog.html" async>
+<link rel="import" href="../paper-button/paper-button.html">
+<link rel="import" href="../paper-input/paper-input.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
+<link rel="import" href="../paper-fab/paper-fab.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
 <!--
 `<cards-input on-add-badge="addcards"></cards-input>`
 -->
