--- a/cards-input.html
+++ b/cards-input.html
@@ -9,7 +9,7 @@
 <dom-module id="cards-input">
   <template>
     <style>
-      paper-fab::shadow > paper-material:hover {
+      paper-fab::shadow:hover {
         @apply(--shadow-elevation-8dp);
       }
     </style>
