--- a/cards-list.html
+++ b/cards-list.html
@@ -6,7 +6,7 @@
 -->
 <dom-module id="cards-list">
   <template>
-    <template is="dom-if" if="{{!edit}}">
+    <template is="dom-if" if="{{!edit}}" sort="sortItems">
       <paper-filter by="type" data="{{cards}}" output="{{output}}"></paper-filter>
       <template is="dom-repeat" items="{{output}}">
         <cards-item style="display:inline-block" cards="{{item}}"></cards-item>
@@ -14,7 +14,7 @@
     </template>
     <template is="dom-if" if="{{edit}}">
       <sortable-list>
-        <template is="dom-repeat" items="{{cards}}">
+        <template is="dom-repeat" items="{{cards}}" sort="sortItems">
           <div style="display:inline-block">
             <cards-item index="[[index]]" edit cards="{{item}}"></cards-item>
           </div>
