--- a/cards-list.html
+++ b/cards-list.html
@@ -7,10 +7,12 @@
 <dom-module id="cards-list">
   <template>
     <template is="dom-if" if="{{!edit}}" sort="sortItems">
-      <paper-filter by="type" data="{{cards}}" output="{{output}}"></paper-filter>
+      <paper-filter by="type" data="{{cards}}" output="{{output}}" style="margin: 20px; padding: 5px;"></paper-filter>
+      <div id="cardBlock" style="width: 100%;margin: 20px; padding: 5px;">
       <template is="dom-repeat" items="{{output}}">
-        <cards-item style="display:inline-block" cards="{{item}}"></cards-item>
+          <cards-item style="display:inline-block;" cards="{{item}}"></cards-item>
       </template>
+    </div>
     </template>
     <template is="dom-if" if="{{edit}}">
       <sortable-list>
